tests/fixtures/fail/not-namespace.php
<?php
/**
 * Functions declared outside of `namespace.php` should generate a warning.
 */

namespace HM\Coding\Standards\Test;

/**
 * This function should be in namespace.php instead.
 */
function foo() {}
